src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Cigna_Demo__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is for testing</description>
        <label>Cigna_Demo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Demo2_MD__c</fullName>
        <defaultValue>true</defaultValue>
        <description>sssssss</description>
        <inlineHelpText>ssssssss</inlineHelpText>
        <label>Demo2_MD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hotfix_trial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hotfix_trial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Second_Pipeline__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second_Pipeline</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TotalOpp__c</fullName>
        <label>TotalOpp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalOpportunityAmount__c</fullName>
        <label>TotalOpportunityAmount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Contacts_Count__c</fullName>
        <label>Total_Contacts_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Number__c</fullName>
        <label>Total_Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Amount__c</fullName>
        <label>Total Opportunity Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>demo5555__c</fullName>
        <defaultValue>false</defaultValue>
        <label>demo5555</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>external_Id__c</fullName>
        <externalId>true</externalId>
        <label>external_Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>